--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Index.cshtml
@@ -28,7 +28,7 @@
                                     @Html.DisplayNameFor(model => model.CantProduct)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Branch.NameBranch)
+                                    @Html.DisplayNameFor(model => model.Name)
                                 </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Enable)
@@ -50,7 +50,7 @@
                                         @Html.DisplayFor(modelItem => item.CantProduct)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Branch.NameBranch)
+                                        @Html.DisplayFor(modelItem => item.Name)
                                     </td>
                                     <td margin-top="60px">
                                         @if (item.Enable.Value)
