--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/_MenuDetails.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/_MenuDetails.cshtml
@@ -9,10 +9,10 @@
         @Html.DisplayFor(model => model.Name)
     </dd>
     <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.Branch.NameBranch)
+        @Html.DisplayNameFor(model => model.Name)
     </dt>
     <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.Branch.NameBranch)
+        @Html.DisplayFor(model => model.Name)
     </dd>
     <dt class = "col-sm-2">
         @Html.DisplayNameFor(model => model.CantProduct)
