--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -26,7 +26,7 @@
             </div>
         </div>
     }
-    @if (Model.Branch.Count() != 0 && Model.Branch.Count() < 3)
+    @if ( Model.Branch.Count() < 3)
     {
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 100px; height:100px">
@@ -50,7 +50,7 @@
     @foreach (var item in Model.TruckPlatforms)
     {
         <div class="col-auto" style="margin-bottom:20px;">
-            <div class="card" style="width: 260px; height:100px">
+            <div class="card" style="width: 100px; height:100px">
                 <div class="card-body">
 
                     <div class="d-flex no-block mb-3 mt-0">
@@ -58,9 +58,7 @@
                             <span class="lstick m-r-20"></span>
                             <img src="@item.Platform.ImageFullPath" alt="Platform" style="width:60px;">
                         </div>
-                        <div class="align-self-center" style="margin-left:10px">
-                            <h2 class="m-t-0">@item.Platform.Name</h2>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
@@ -72,7 +70,7 @@
             <div class="card" style="width: 100px; height:100px">
 
                 <div class="btn-group" style="width:100%; height:100%;">
-                    <a asp-action="CreateBranch" class="btn btn-secondary" style="width:100%; height:100%;">
+                    <a asp-action="AddPlatforms" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
