--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = Model.Nametruck;
 }
-<h3>Sucursales</h3>
+<h3>Mis Sucursales</h3>
 <div class="row">
 
     @foreach (var item in Model.Branch)
@@ -26,7 +26,7 @@
             </div>
         </div>
     }
-    @if ( Model.Branch.Count() < 3)
+    @if (Model.Branch.Count() < 3)
     {
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 100px; height:100px">
@@ -38,18 +38,19 @@
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
                     </a>
-                  
+
                 </div>
             </div>
         </div>
     }
 </div>
-<h3>Plataformas</h3>
+
+<h3>Mis Plataformas</h3>
 <div class="row">
 
     @foreach (var item in Model.TruckPlatforms)
     {
-        <div class="col-auto" style="margin-bottom:20px;">
+        <div class="col-auto" style="margin-bottom:20px;" onclick="ConfirmDelete(@item.Id)" id="row_@item.Id">
             <div class="card" style="width: 100px; height:100px">
                 <div class="card-body">
 
@@ -58,7 +59,7 @@
                             <span class="lstick m-r-20"></span>
                             <img src="@item.Platform.ImageFullPath" alt="Platform" style="width:60px;">
                         </div>
-                       
+
                     </div>
                 </div>
             </div>
@@ -80,3 +81,105 @@
         </div>
     }
 </div>
+<h3>Mis Menu</h3>
+<div class="row">
+
+    @foreach (var item in Model.TruckPlatforms)
+    {
+        <div class="col-auto" style="margin-bottom:20px;">
+            <div class="card" style="width: 100px; height:100px">
+                <div class="card-body">
+
+                    <div class="d-flex no-block mb-3 mt-0">
+                        <div class="m-r-20 align-self-center">
+                            <span class="lstick m-r-20"></span>
+                            <img src="@item.Platform.ImageFullPath" alt="Platform" style="width:60px;">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+    @if (Model.TruckPlatforms.Count() < 5)
+    {
+        <div class="col-auto" style="margin-bottom:20px;">
+            <div class="card" style="width: 100px; height:100px">
+
+                <div class="btn-group" style="width:100%; height:100%;">
+                    <a asp-action="AddPlatforms" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
+<!-- Modal Plataformas inicio-->
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Eliminar plataforma</h3>
+            </div>
+            <div class="modal-body">
+                <h4>Estas seguro? Se eliminará esta plataforma de tu Truck. </h4>
+
+                <div style="text-align:center;display:none" id="loaderDiv">
+
+                    <img src="~/Content/img/2xkV.gif" style="height:200px;width:200px" />
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="" class="btn btn-danger" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
+                <a href="#" class="btn btn-success" onclick="DeletePlatform()">Confirm</a>
+            </div>
+        </div>
+    </div>
+</div>
+<input type="hidden" id="hiddenPlatformId" />
+<!-- Modal Plataformas Fin-->
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script type="text/javascript">
+        var ConfirmDelete = function (Id) {
+            $("#hiddenPlatformId").val(Id);
+            $("#myModal").modal('show'); 
+            @*alert("unasa " + Id);*@
+
+                }
+        var DeletePlatform = function () {
+
+            $("#loaderDiv").show();
+
+            var Id = $("#hiddenPlatformId").val();
+
+            $.ajax({
+
+                type: "POST",
+                url: "/Truck/DeletePlatform",
+                data: { PlataformsId: Id },
+                success: function (result) {
+                    $("#loaderDiv").hide();
+                    $("#myModal").modal("hide");
+                    $("#row_" + Id).remove();
+
+                },
+                closed: function () {
+                    $("#myModal").modal("hide");
+                }
+
+
+            })
+
+        }
+        var CancelDelete = function (PlatformsId) {
+            $("#myModal").modal("hide");
+
+        }
+    </script>
+}
