--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -128,13 +128,15 @@
                 <h4>Estas seguro? Se eliminará esta plataforma de tu Truck. </h4>
 
                 <div style="text-align:center;display:none" id="loaderDiv">
-
-                    <img src="~/Content/img/2xkV.gif" style="height:200px;width:200px" />
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <!--<img src="~/Content/img/2xkV.gif" style="height:200px;width:200px" />-->
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="" class="btn btn-danger" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
-                <a href="#" class="btn btn-success" onclick="DeletePlatform()">Confirm</a>
+                <a href="" class="btn btn-outline-dark" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
+                <a href="#" class="btn btn-outline-dark" onclick="DeletePlatform()">Confirm</a>
             </div>
         </div>
     </div>
@@ -148,10 +150,10 @@
     <script type="text/javascript">
         var ConfirmDelete = function (Id) {
             $("#hiddenPlatformId").val(Id);
-            $("#myModal").modal('show'); 
-            @*alert("unasa " + Id);*@
+            $("#myModal").modal('show');
+        @*alert("unasa " + Id);*@
 
-                }
+                        }
         var DeletePlatform = function () {
 
             $("#loaderDiv").show();
