--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/Details.cshtml
@@ -50,14 +50,14 @@
             </div>
         </div>
     }
-    @if (Model.Tables.Count() < 5)
+    @if (Model.Tables.Count() < Model.TablesNumbers)
     {
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 100px; height:100px">
 
                 <div style="width:100%; height:100%;">
 
-                    <a asp-action="CreateTable" class="btn btn-secondary" style="width:100%; height:100%;">
+                    <a asp-action="CreateTable" asp-controller="Table" class="btn btn-secondary" style="width:100%; height:100%;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
