--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/Details.cshtml
@@ -17,7 +17,7 @@
             <a asp-action="Index" asp-controller="Truck" class="btn btn-outline-secondary">Regresar</a>
         </div>
     }
-</div> 
+</div>
 <hr />
 <div class="row mt-2" style="flex-direction:row;">
     <h3>Mis Mesas</h3>
@@ -32,7 +32,7 @@
                     @if (item.Occupied == true)
                     {
                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                           !
+                            !
                             <span class="visually-hidden">unread messages</span>
                         </span>
                     }
@@ -57,7 +57,7 @@
 
                 <div style="width:100%; height:100%;">
 
-                    <a asp-action="CreateTable" asp-controller="Table" class="btn btn-secondary" style="width:100%; height:100%;">
+                    <a asp-action="Create" asp-controller="Table" class="btn btn-secondary" style="width:100%; height:100%;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
