--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -105,6 +105,45 @@
      
     }
 
+    @if (Model.Menu.Count() < 5)
+    {
+        <div class="col-auto" style="margin-bottom:20px;">
+            <div class="card" style="width: 100px; height:100px">
+
+                <div class="btn-group" style="width:100%; height:100%;">
+                    <a asp-controller="Menus" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
+<h3>Mis Productos</h3>
+<div class="row">
+
+    @foreach (var item in Model.Product)
+    {
+        <div class="col-auto" style="margin-bottom:20px;">
+            <div class="card" style="width: 260px; height:100px">
+                <div class="card-body">
+                    <a class="nav-link text-dark" asp-controller="Menus" asp-action="Details" asp-route-id="@item.Id" style="margin-top:-10px;">
+                        <div class="d-flex no-block mb-3 mt-0">
+                            <div class="align-self-center" style="margin-left:10px">
+                                <h6 class="text-muted m-t-10 m-b-0">@item.Category.</h6>
+                                <h2 class="m-t-0">Productos: @item.Truck.Product.Count</h2>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+     
+    }
+
     @if (Model.TruckPlatforms.Count() < 5)
     {
         <div class="col-auto" style="margin-bottom:20px;">
