--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -124,16 +124,16 @@
 <h3>Mis Productos</h3>
 <div class="row">
 
-    @foreach (var item in Model.Product)
+    @foreach (var item in Model.Product.DistinctBy(c =>c.Category.Id))
     {
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 260px; height:100px">
                 <div class="card-body">
-                    <a class="nav-link text-dark" asp-controller="Menus" asp-action="Details" asp-route-id="@item.Id" style="margin-top:-10px;">
+                    <a class="nav-link text-dark" asp-controller="Product" asp-action="Index" asp-route-id="@item.Truck.Id" style="margin-top:-10px;">
                         <div class="d-flex no-block mb-3 mt-0">
                             <div class="align-self-center" style="margin-left:10px">
-                                <h6 class="text-muted m-t-10 m-b-0">@item.Category.</h6>
-                                <h2 class="m-t-0">Productos: @item.Truck.Product.Count</h2>
+                                <h6 class="text-muted m-t-10 m-b-0">@item.Category.NameCat</h6>
+                                <h2 class="m-t-0">Productos: @item.Truck.Product.Where(p => p.Category.Id == item.Category.Id).Select(c =>c.Id).Distinct().Count()</h2>
                             </div>
 
                         </div>
